WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282393
Progress reporting is not started for blob downloads
https://bugs.webkit.org/show_bug.cgi?id=282393
Summary
Progress reporting is not started for blob downloads
Per Arne Vollan
Reported
2024-10-31 09:21:38 PDT
Progress reporting is not started for blob downloads.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2024-10-31 09:21:40 PDT
<
rdar://problem/138012063
>
Per Arne Vollan
Comment 2
2024-10-31 09:29:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36001
EWS
Comment 3
2024-11-01 10:46:27 PDT
Committed
286012@main
(f109be54bd9d): <
https://commits.webkit.org/286012@main
> Reviewed commits have been landed. Closing PR #36001 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug